<resources>
    <string name="app_name">Try LBRY</string>
    <string name="dialog_choice_youtube">Watch on YouTube</string>
    <string name="dialog_choice_lbry">Watch on LBRY</string>
    <string name="dialog_checking_youtube_video">Let\'s see if this video is available on LBRY…</string>
    <string name="dialog_checking_youtube_channel">Let\'s see if this channel is available on LBRY…</string>
    <string name="dialog_found_youtube_video">This video is available on LBRY!</string>
    <string name="dialog_found_youtube_channel">This channel is available on LBRY!</string>
    <string name="dialog_error">Error while checking LBRY availability</string>
    <string name="dialog_error_wrong_url">This is not a YouTube video or channel URL:\n%s</string>
    <string name="activity_error_wrong_url">This is not a YouTube video or channel URL</string>
    <string name="youtube_not_found">Not found on LBRY, use YouTube for now:</string>
    <string name="open_youtube">Select app for YouTube:</string>
    <string name="activity_prompt_url">YouTube video or channel link</string>
    <string name="activity_desc">Let\'s see if your favorite YouTube content is available on LBRY</string>
    <string name="help_what_is_lbry">What is LBRY?</string>
    <string name="clipboard_bad">Your clipboard does not contain a video link.</string>
</resources>