<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.TryLBRY"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/Theme.TryLBRYActionBar"
        android:background="?colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:endIconDrawable="@drawable/baseline_content_paste_24"
        app:endIconMode="custom" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urlInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginTop="20sp"
            android:hint="@string/activity_prompt_url" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:layout_margin="15dp"
        android:text="@string/activity_desc" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/watchOnLbry"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_choice_lbry"
        android:textColor="?colorPrimary"
        android:visibility="gone" />

    <Button
        android:id="@+id/watchOnYoutube"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_choice_youtube"
        android:textColor="?colorSecondary"
        android:visibility="gone" />

</LinearLayout>