<?xml version="1.0" encoding="utf-8"?>


<!-- Layout is invisible by default -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/Theme.TryLBRY"
    android:visibility="gone"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="10sp"
        android:gravity="fill_horizontal"
        android:text="Placeholder text, checking if this content is on LBRY..." />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <Button
        android:id="@+id/watchOnLbry"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_choice_lbry"
        android:textColor="?colorPrimary"
        android:visibility="gone" />

    <Button
        android:id="@+id/watchOnYoutube"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_choice_youtube"
        android:textColor="?colorSecondary" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:textColor="?colorPrimary" />

</LinearLayout>